--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -11,6 +11,7 @@
 // Components Homepage
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
+@import "components/Vignettes.scss";
 // Components DSO pages
 @import "components/Dso";
 @import "components/BandeauHeader";
