--- a/templates/includes/components/vignettes.html.twig
+++ b/templates/includes/components/vignettes.html.twig
@@ -1,2 +1,1 @@
-<div id="appVignette" data-vignettes="{{ vignettes|json_encode }}">
-</div>
+<div id="appVignette" data-vignettes="{{ vignettes|json_encode }}"></div>
