--- a/assets/css/components/Vignettes.scss
+++ b/assets/css/components/Vignettes.scss
@@ -2,10 +2,10 @@
   &__container {
     display: flex;
     width: 100%;
-    max-width: 70%;
+    //max-width: 70%;
     justify-content: space-between;
     //background-color: rgba(255,255,255,.25);
-    box-shadow: 0 1em 2em -1em rgba(0,0,0,.5);
+    //box-shadow: 0 1em 2em -1em rgba(0,0,0,.5);
     padding: 1em 2em;
     z-index: 50;
   }
