--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -10,9 +10,9 @@ $scale-base-1: (1 + $scale / 100%);
 
   &__slides {
     //position: relative;
-    position: absolute;
+    position: fixed;
     width: 100vw;
-    height: 25%;
+    height: 100vh;
     overflow: hidden;
     z-index: 0;
   }
@@ -66,8 +66,8 @@ $scale-base-1: (1 + $scale / 100%);
   &__Research {
     z-index: 99;
     width: fit-content;
-    position: absolute;
-    top: 50%;
+    position: fixed;
+    top: 33%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
 
@@ -86,8 +86,8 @@ $scale-base-1: (1 + $scale / 100%);
   }
 
   &__Vignettes {
-    top: 25%;
-    position: absolute;
+    top: 66%;
+    position: fixed;
     width: 100vw;
     height: 75%;
     overflow: hidden;
