--- a/assets/css/components/Vignettes.scss
+++ b/assets/css/components/Vignettes.scss
@@ -8,6 +8,9 @@
     //box-shadow: 0 1em 2em -1em rgba(0,0,0,.5);
     padding: 1em 2em;
     z-index: 50;
+    @media ($mq-phone) {
+      padding: 1em;
+    }
   }
 
   &__vignette {
@@ -19,5 +22,11 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
+
+    @media ($mq-phone) {
+      border: 2px solid rgba(255,255,255,0.3);
+      width: 100px;
+      height: 100px;
+    }
   }
 }
