--- a/assets/css/components/Searchautocomplete.scss
+++ b/assets/css/components/Searchautocomplete.scss
@@ -31,15 +31,18 @@
     border-radius: 0.3rem;
     line-height: 2;
     font-size: 1.25rem;
-    background: $bgd-white url(/build/images/layout/close.gif) no-repeat right -1em center;
+    background: $bgd-light-grey url('/build/images/layout/close.gif') no-repeat right -1em center;
     transition: background 0.4s;
+    color: $color-text-dark;;
 
-    /*&__x {
-      background-position: right 5px center;
+    &::placeholder {
+      color: $color-text-dark;
+      opacity: 1; /** firefox **/
     }
-    &__onX {
-      cursor: pointer;
-    }*/
+
+    &::-ms-input-placeholder { /* Microsoft Edge */
+      color: $color-text-dark;
+    }
 
     &::-ms-clear {
       display: none; width:0; height:0;
@@ -98,9 +101,6 @@
     width: 100%;
     padding: 1em;
     margin: 0;
-  }
-
-  &__inputText {
   }
 
   &__list {
