--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -77,7 +77,7 @@ $scale-base-1: (1 + $scale / 100%);
         font-size: 1em;
       }
       width: 90%;
-      top: 40%;
+      top: 20%;
     }
 
     @media ($mq-tablet) {
@@ -103,6 +103,11 @@ $scale-base-1: (1 + $scale / 100%);
     font-weight: 500;
     font-size: 2rem;
     margin-bottom: 0.5em;
+
+    @media ($mq-phone) {
+      text-align: center;
+      font-size: 1.5rem;
+    }
   }
 }
 
