--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -1,8 +1,7 @@
 .header {
   display: flex;
   flex-wrap: wrap;
-  z-index: 20;
-
+  z-index: 100;
   position: fixed;
   width: 100%;
   top: 0;
@@ -20,9 +19,6 @@
   }
 
   &__wrap {
-    //position: relative;
-    //top: 50%;
-    //transform: translateY(-50%);
     padding: 0.5em;
     width: 100%;
     display: flex;
@@ -30,6 +26,10 @@
     justify-content: space-between;
     opacity: 0.7;
     min-width: 320px;
+
+    @media ($mq-phone) {
+      opacity: 0.9;
+    }
   }
 
   &__menu {
