--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -23,6 +23,7 @@
 @import "components/Filters";
 body {
   font-family: $font;
+  font-size: large;
   background-color: $bgd-dark;
   margin: 0;
   overflow-x: hidden;
