Build new page 404

--- a/templates/exceptions/exceptions.html.twig
+++ b/templates/exceptions/exceptions.html.twig
@@ -7,9 +7,10 @@
   <div id="appNotFound"
      data-title="{{ 'error.message'|trans({'%error%': exception.statusCode}) }}"
   ></div>
+
+  {% block footer %}{% endblock %}
 {% endblock %}
 
 {% block javascripts %}
-  {{ parent() }}
   {{ encore_entry_script_tags('notfound') }}
 {% endblock %}
