--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -24,6 +24,7 @@
     data-title-const="{{ constTitle }}"
     data-dso-const="{{ dso_by_const|json_encode }}"
     data-filter="{{ list_types_filters|json_encode }}"
+    data-breadcrumbs="{{ breadcrumbs|json_encode }}"
   >
   </div>
   <div id="geojson"
