Add breadcrumbs to constellation page

--- a/templates/pages/constellation.html.twig
+++ b/templates/pages/constellation.html.twig
@@ -19,6 +19,7 @@
      data-legend-map="{{ list_types|json_encode }}"
      data-filter="{{ list_types_filters|json_encode }}"
      data-url-ajax="{{ ajax_dso_by_const }}"
+     data-breadcrumbs="{{ breadcrumbs|json_encode }}"
   ></div>
   <div id="geojson"
        data-dso="{{ geojsonDso|json_encode }}"
