add breadcrumbs for events and report obs

--- a/templates/pages/event.html.twig
+++ b/templates/pages/event.html.twig
@@ -17,6 +17,7 @@
     data-data="{{ data|json_encode }}"
     data-coordinates="{{ coordinates|json_encode }}"
     data-labels="{{ labels|json_encode }}"
+    data-breadcrumbs="{{ breadcrumbs|json_encode }}"
   ></div>
 
 {% endblock %}
