--- a/templates/pages/observation.html.twig
+++ b/templates/pages/observation.html.twig
@@ -20,6 +20,7 @@
      data-coordinates="{{ coordinates|json_encode }}"
      data-list-dso="{{ list_dso|json_encode }}"
      data-labels="{{ labels|json_encode }}"
+     data-breadcrumbs="{{ breadcrumbs|json_encode }}"
   ></div>
 {% endblock %}
 
