Ass tipeee link

--- a/templates/pages/support.html.twig
+++ b/templates/pages/support.html.twig
@@ -18,9 +18,11 @@
             </ul>
             {{ 'support.second'|trans|raw }}
           </p>
-          <div id="appLinks"
-               data-links="{{ links|json_encode }}"
-          ></div>
+          <div class="footer__share">
+            <div id="appLinks"
+                 data-links="{{ links|json_encode }}"
+            ></div>
+          </div>
           <p>
             {{ 'support.third'|trans|raw }}
           </p>
