Fix form submit

--- a/templates/forms/observation.html.twig
+++ b/templates/forms/observation.html.twig
@@ -137,8 +137,6 @@
   </div>
 
   <div class="Form__group">
-    <button type="submit" class="Form__submit" id="btn_contact_submit">
-      {{ 'contact.form.submit'|trans }}
-    </button>
+    <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}" />
   </div>
 {{ form_end(form) }}
