--- a/assets/css/components/Form.scss
+++ b/assets/css/components/Form.scss
@@ -122,6 +122,10 @@
     padding: 1em 1.5em;
     margin-bottom: 1em;
     border: 1px solid transparent;
+
+    @media ($mq-phone) {
+      margin: 0em 0.5em 0.5em 0em;
+    }
   }
 
   &__input-error {
