Add social networks links to structured data

--- a/templates/includes/schema/logo.html.twig
+++ b/templates/includes/schema/logo.html.twig
@@ -3,6 +3,10 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "url": "{{pageUrlCanonical}}",
-    "logo": "{{ absolute_url('/build/images/logo_tmp.png')}}"
+    "logo": "{{ absolute_url('/build/images/logo_tmp.png')}}",
+    "sameAs": [
+      "{{ facebookPage }}",
+      "{{ twitterPage }}"
+    ]
   }
 </script>
