Add item on schema.org data

--- a/templates/includes/schema/logo.html.twig
+++ b/templates/includes/schema/logo.html.twig
@@ -2,6 +2,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
+    "name":"{{ pageTitle }}",
     "url": "{{pageUrlCanonical}}",
     "logo": "{{ absolute_url('/build/images/logo_tmp.png')}}",
     "sameAs": [
