--- a/templates/forms/event.html.twig
+++ b/templates/forms/event.html.twig
@@ -112,7 +112,6 @@
   </div>
 
   <div class="Form__group">
-    <!-- input type="submit" class="Form__submit" id="btn_event_submit" value="" /-->
-    <button type="submit" class="Form__submit" id="btn_event_submit">{{ 'contact.form.submit'|trans }}</button>
+    <input type="submit" class="Form__submit" id="btn_event_submit" value="{{ 'contact.form.submit'|trans }}" />
   </div>
 {{ form_end(form) }}
