--- a/templates/forms/event.html.twig
+++ b/templates/forms/event.html.twig
@@ -112,6 +112,6 @@
   </div>
 
   <div class="Form__group">
-    <input type="submit" class="Form__submit" id="btn_event_submit" value="{{ 'contact.form.submit'|trans }}" />
+    <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}" />
   </div>
 {{ form_end(form) }}
