--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
     {% set pageDesc = pageDesc|default(pageDescDefault) %}
 
     {% set pageUrl = app.request.uri %}
-    {% set pageImage = pageImage|default('/build/images/logo_tmp.png') %}
+    {% set pageImage = pageImage|default('/build/images/astro_otter@500x500.jpg') %}
     {% set pageImageDesc = pageImageDesc|default('') %}
     {% set pageUrlCanonical = app.request.getSchemeAndHttpHost ~ app.request.baseUrl ~ app.request.pathInfo %}
 
