--- a/templates/includes/schema/logo.html.twig
+++ b/templates/includes/schema/logo.html.twig
@@ -4,7 +4,7 @@
     "@type": "Organization",
     "name":"{{ pageTitle }}",
     "url": "{{pageUrlCanonical}}",
-    "logo": "{{ absolute_url('/build/images/logo_tmp.png')}}",
+    "logo": "{{ absolute_url('/build/images/astro_otter@500x500.jpg')}}",
     "sameAs": [
       "{{ facebookPage }}",
       "{{ twitterPage }}"
