--- a/templates/includes/schema/logo.html.twig
+++ b/templates/includes/schema/logo.html.twig
@@ -4,7 +4,7 @@
     "@type": "Organization",
     "name":"{{ pageTitle }}",
     "url": "{{pageUrlCanonical}}",
-    "logo": "{{ absolute_url('/build/images/astro_otter@500x500.jpg')}}",
+    "logo": "{{ absolute_url('/build/images/logos/astro_otter_200-200.png')}}",
     "sameAs": [
       "{{ facebookPage }}",
       "{{ twitterPage }}"
