--- a/templates/pages/random.html.twig
+++ b/templates/pages/random.html.twig
@@ -9,6 +9,8 @@
       <div class="Dso__container Dso__noHeader">
         <h1 class="Dso__title">{{ title }}</h1>
 
+        <img src="{{ pageImage200 }}" alt="{{ 'pageTitle'|trans }}" class="center_image">
+
         <div>
           <p>{{ first_line }}</p>
           <p>{{ second_line }}</p>
