--- a/templates/pages/support.html.twig
+++ b/templates/pages/support.html.twig
@@ -10,6 +10,7 @@
         <h1 class="Dso__title">{{ 'support.title'|trans }}</h1>
 
         <div>
+          <img src="{{ pageImage200 }}" alt="{{ 'pageTitle'|trans }}" class="center_image">
           <p>{{ 'support.first'|trans({'%sitename%': 'dso'|trans})|raw }}</p>
           <p>
             <ul>
