--- a/templates/includes/emails/api_register.txt.twig
+++ b/templates/includes/emails/api_register.txt.twig
@@ -1,3 +1,8 @@
-Here's the token for API :
-
+Thank you for registration on Astro-Otter API
+Here's the token :
 {{ token }}
+
+And the refresh token :
+{{ refresh_token }}
+
+Visit the API documentation: {{ absolute_url(path('help_api_page')) }}
