Update search bar for mobile user

--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -1,6 +1,7 @@
 {% set labelsTranslation = {
     'title': 'dso'|trans|trim,
     'searchPlaceholder': 'home.search.placeholder'|trans|trim,
+    'searchPlaceholderMobile': 'home.search.placeholder_mobile'|trans|trim,
     'openMenu': 'openMenu'|trans|trim,
     'switchLang': 'switchLang'|trans|trim,
     'nightMode': 'nightMode'|trans,
