--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -9,6 +9,7 @@
      data-home-title="{{ 'homepage.message'|trans }}"
      data-search-route="{{ path('search_ajax', {'_locale': currentLocale}) }}"
      data-search-placeholder="{{ 'home.search.placeholder'|trans }}"
+     data-search-placeholder-mobile="{{ 'home.search.placeholder_mobile'|trans|trim }}"
   ></div>
   {{ render_esi(controller('App\\Controller\\HomeController::vignettesDso')) }}
 {% endblock %}
