--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -66,7 +66,7 @@ $scale-base-1: (1 + $scale / 100%);
   &__Research {
     z-index: 50;
     width: fit-content;
-    position: fixed;
+    position: absolute;
     top: 33%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
@@ -76,7 +76,7 @@ $scale-base-1: (1 + $scale / 100%);
         text-align: center;
         font-size: 1.5em;
       }
-      width: 90%;
+      width: 95%;
       top: 25%;
     }
 
