Fix left menu for mobile

--- a/assets/css/components/Dso.scss
+++ b/assets/css/components/Dso.scss
@@ -66,6 +66,12 @@
     @media($mq-phone) {
       font-size: 0.9rem;
     }
+
+    a {
+      color: $color-text;
+      text-decoration: none;
+      cursor: pointer;
+    }
   }
 
   // Slider VueFlux
