test for mobile

--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -76,6 +76,7 @@ $scale-base-1: (1 + $scale / 100%);
         text-align: center;
         font-size: 1.5em;
       }
+      position: absolute;
       width: 95%;
       top: 25%;
     }
