--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -15,7 +15,7 @@
     data-imgcover="{{ imgCover|default('default') }}"
     data-imgcoveralt="{{ imgCoverAlt|default('') }}"
     data-dso="{{ dsoData|json_encode }}"
-    data-title="{{ title }}"
+    data-title="{{ dso.title }}"
     data-description="{{ description }}"
     data-title-map="{{ 'skymap'|trans }}"
     data-title-gallery="{{ 'galery'|trans }}"
