--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% set pageTitle =  'dso.title.seo'|trans({'%title%': title, '%type%': dso.type|trans|lower }) %}
-{% set pageImage = imgCover %}
+{% set pageTitle =  'dso.title.seo'|trans({'%title%': dso.title, '%type%': dso.type|trans|lower }) %}
+{% set pageImage = dso.astrobin.url_regular|default('default') %}
 
-{% set descDefaut = 'dso.desc.seo'|trans({'%title%': dso.title,'%constId%': dso.constellation.title|lower,'%type%': dso.type|trans|lower, '%mag%': dso.magnitude }) %}
+{% set descDefaut = 'dso.desc.seo'|trans({'%title%': dso.title, '%constId%': dso.constellation.title|lower,'%type%': dso.type|trans|lower, '%mag%': dso.magnitude }) %}
 {% set pageDesc = dso.description|truncate(200)|default(descDefaut) %}
 {% set pageImageDesc = imgCoverAlt %}
 
